--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-server.port=6039
-spring.data.mongodb.uri=mongodb://localhost:27017/studentdb
+server.port=8888
+spring.data.mongodb.uri=mongodb://localhost:27017/resdb
